--- a/blink_practice/project/Objects/main.build_log.htm
+++ b/blink_practice/project/Objects/main.build_log.htm
@@ -22,16 +22,24 @@ Dialog DLL:      TCM.DLL V1.35.1.0
  
 <h2>Project:</h2>
 D:\LPC4357\blink_practice\project\main.uvprojx
-Project File Date:  10/07/2023
+Project File Date:  10/08/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Rebuild target 'Target 1'
 assembling startup_LPC43xx.s...
+compiling GPIO_LPC43xx.c...
+compiling SCU_LPC43xx.c...
 compiling main.c...
+compiling LED_lpc43xx.c...
 compiling system_LPC43xx.c...
 linking...
-Program Size: Code=2974 RO-data=822 RW-data=8 ZI-data=512  
+Program Size: Code=3268 RO-data=900 RW-data=4 ZI-data=516  
+After Build - User command #1: C:\Keil_v5\/ARM/BIN/ElfDwT.exe .\Objects\main.axf BASEADDRESS(0x1A000000)
+ELFDWT - Signature Creator V1.4.0.0
+COPYRIGHT Copyright (C) 2014-2018, ARM Ldt. and  ARM Germany GmbH
+*** Updated Signature over Range[32] (0x1A000000 - 0x1A000018): @0x1A00001C = 0x3DFFFDB6
+*** Processing completed, no Errors.
 ".\Objects\main.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -46,7 +54,7 @@ Package Vendor: Keil
   C:\Users\Jinzhi Shen\AppData\Local\Arm\Packs\Keil\LPC4300_DFP\2.9.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:05
 </pre>
 </body>
 </html>
