--- a/blink_practice/project/Objects/main.htm
+++ b/blink_practice/project/Objects/main.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\main.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\main.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060750: Last Updated: Sat Oct 07 22:30:36 2023
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060750: Last Updated: Sun Oct 08 14:20:54 2023
 <BR><P>
 <H3>Maximum Stack Usage =        128 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -97,7 +97,7 @@ Global Symbols
 <P><STRONG><a name="[3e]"></a>__main</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry.o(.ARM.Collect$$$$00000000))
 <BR>[Address Reference Count : 1]<UL><LI> startup_lpc43xx.o(.text)
 </UL>
-<P><STRONG><a name="[4c]"></a>_main_stk</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry2.o(.ARM.Collect$$$$00000001))
+<P><STRONG><a name="[53]"></a>_main_stk</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry2.o(.ARM.Collect$$$$00000001))
 
 <P><STRONG><a name="[3f]"></a>_main_scatterload</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry5.o(.ARM.Collect$$$$00000004))
 <BR><BR>[Calls]<UL><LI><a href="#[40]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__scatterload
@@ -107,15 +107,15 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[40]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__scatterload
 </UL>
 
-<P><STRONG><a name="[4d]"></a>_main_clock</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry7b.o(.ARM.Collect$$$$00000008))
+<P><STRONG><a name="[54]"></a>_main_clock</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry7b.o(.ARM.Collect$$$$00000008))
 
-<P><STRONG><a name="[4e]"></a>_main_cpp_init</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry8b.o(.ARM.Collect$$$$0000000A))
+<P><STRONG><a name="[55]"></a>_main_cpp_init</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry8b.o(.ARM.Collect$$$$0000000A))
 
-<P><STRONG><a name="[4f]"></a>_main_init</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry9a.o(.ARM.Collect$$$$0000000B))
+<P><STRONG><a name="[56]"></a>_main_init</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry9a.o(.ARM.Collect$$$$0000000B))
 
-<P><STRONG><a name="[50]"></a>__rt_final_cpp</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry10a.o(.ARM.Collect$$$$0000000D))
+<P><STRONG><a name="[57]"></a>__rt_final_cpp</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry10a.o(.ARM.Collect$$$$0000000D))
 
-<P><STRONG><a name="[51]"></a>__rt_final_exit</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry11a.o(.ARM.Collect$$$$0000000F))
+<P><STRONG><a name="[58]"></a>__rt_final_exit</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, entry11a.o(.ARM.Collect$$$$0000000F))
 
 <P><STRONG><a name="[41]"></a>__aeabi_uldivmod</STRONG> (Thumb, 98 bytes, Stack size 40 bytes, uldiv.o(.text))
 <BR><BR>[Stack]<UL><LI>Max Depth = 40<LI>Call Chain = __aeabi_uldivmod
@@ -123,15 +123,15 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_llsr
 <LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_llsl (via Veneer)
 </UL>
-<BR>[Called By]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit_ExtMemCtl (via Veneer)
-<LI><a href="#[48]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WaitUs
+<BR>[Called By]<UL><LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit_ExtMemCtl (via Veneer)
+<LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WaitUs
 </UL>
 
 <P><STRONG><a name="[42]"></a>__aeabi_llsr</STRONG> (Thumb, 32 bytes, Stack size 0 bytes, llushr.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[41]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_uldivmod
 </UL>
 
-<P><STRONG><a name="[52]"></a>_ll_ushift_r</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, llushr.o(.text), UNUSED)
+<P><STRONG><a name="[59]"></a>_ll_ushift_r</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, llushr.o(.text), UNUSED)
 
 <P><STRONG><a name="[40]"></a>__scatterload</STRONG> (Thumb, 28 bytes, Stack size 0 bytes, init.o(.text))
 <BR><BR>[Calls]<UL><LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main_after_scatterload
@@ -139,29 +139,66 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[3f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_main_scatterload
 </UL>
 
-<P><STRONG><a name="[53]"></a>__scatterload_rt2</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, init.o(.text), UNUSED)
+<P><STRONG><a name="[5a]"></a>__scatterload_rt2</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, init.o(.text), UNUSED)
 
-<P><STRONG><a name="[45]"></a>GetClockFreq</STRONG> (Thumb, 196 bytes, Stack size 32 bytes, system_lpc43xx.o(i.GetClockFreq))
-<BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = GetClockFreq &rArr; GetPLL1Param
+<P><STRONG><a name="[46]"></a>GPIO_PinWrite</STRONG> (Thumb, 30 bytes, Stack size 8 bytes, gpio_lpc43xx.o(i.GPIO_PinWrite))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = GPIO_PinWrite
 </UL>
-<BR>[Calls]<UL><LI><a href="#[47]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetClkSel (via Veneer)
-<LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetPLL1Param
-</UL>
-<BR>[Called By]<UL><LI><a href="#[49]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemCoreClockUpdate (via Veneer)
+<BR>[Called By]<UL><LI><a href="#[47]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_On
+<LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Off
+<LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Initialize (via Veneer)
 </UL>
 
-<P><STRONG><a name="[4a]"></a>SetClock</STRONG> (Thumb, 458 bytes, Stack size 12 bytes, system_lpc43xx.o(i.SetClock))
+<P><STRONG><a name="[4f]"></a>GetClkSel</STRONG> (Thumb, 168 bytes, Stack size 0 bytes, system_lpc43xx.o(i.GetClkSel))
+<BR><BR>[Called By]<UL><LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetClockFreq (via Veneer)
+</UL>
+
+<P><STRONG><a name="[45]"></a>LED_Off</STRONG> (Thumb, 40 bytes, Stack size 16 bytes, led_lpc43xx.o(i.LED_Off))
+<BR><BR>[Stack]<UL><LI>Max Depth = 24<LI>Call Chain = LED_Off &rArr; GPIO_PinWrite
+</UL>
+<BR>[Calls]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIO_PinWrite
+</UL>
+<BR>[Called By]<UL><LI><a href="#[3c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
+</UL>
+
+<P><STRONG><a name="[47]"></a>LED_On</STRONG> (Thumb, 40 bytes, Stack size 16 bytes, led_lpc43xx.o(i.LED_On))
+<BR><BR>[Stack]<UL><LI>Max Depth = 24<LI>Call Chain = LED_On &rArr; GPIO_PinWrite
+</UL>
+<BR>[Calls]<UL><LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIO_PinWrite
+</UL>
+<BR>[Called By]<UL><LI><a href="#[3c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
+</UL>
+
+<P><STRONG><a name="[48]"></a>SetClock</STRONG> (Thumb, 458 bytes, Stack size 12 bytes, system_lpc43xx.o(i.SetClock))
 <BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = SetClock
 </UL>
-<BR>[Called By]<UL><LI><a href="#[3d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit (via Veneer)
+<BR>[Called By]<UL><LI><a href="#[3d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit
 </UL>
 
-<P><STRONG><a name="[54]"></a>__scatterload_copy</STRONG> (Thumb, 14 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_copy), UNUSED)
+<P><STRONG><a name="[3d]"></a>SystemInit</STRONG> (Thumb, 64 bytes, Stack size 8 bytes, system_lpc43xx.o(i.SystemInit))
+<BR><BR>[Stack]<UL><LI>Max Depth = 128<LI>Call Chain = SystemInit &rArr; SystemInit_ExtMemCtl &rArr; WaitUs &rArr; __aeabi_uldivmod
+</UL>
+<BR>[Calls]<UL><LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit_ExtMemCtl (via Veneer)
+<LI><a href="#[49]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemCoreClockUpdate (via Veneer)
+<LI><a href="#[48]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SetClock
+</UL>
+<BR>[Address Reference Count : 1]<UL><LI> startup_lpc43xx.o(.text)
+</UL>
+<P><STRONG><a name="[5b]"></a>__scatterload_copy</STRONG> (Thumb, 14 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_copy), UNUSED)
 
-<P><STRONG><a name="[55]"></a>__scatterload_null</STRONG> (Thumb, 2 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_null), UNUSED)
+<P><STRONG><a name="[5c]"></a>__scatterload_null</STRONG> (Thumb, 2 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_null), UNUSED)
 
-<P><STRONG><a name="[56]"></a>__scatterload_zeroinit</STRONG> (Thumb, 14 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_zeroinit), UNUSED)
+<P><STRONG><a name="[5d]"></a>__scatterload_zeroinit</STRONG> (Thumb, 14 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_zeroinit), UNUSED)
 
+<P><STRONG><a name="[3c]"></a>main</STRONG> (Thumb, 62 bytes, Stack size 8 bytes, main.o(i.main))
+<BR><BR>[Stack]<UL><LI>Max Depth = 32<LI>Call Chain = main &rArr; LED_On &rArr; GPIO_PinWrite
+</UL>
+<BR>[Calls]<UL><LI><a href="#[47]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_On
+<LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Off
+<LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Initialize (via Veneer)
+</UL>
+<BR>[Address Reference Count : 1]<UL><LI> entry9a.o(.ARM.Collect$$$$0000000B)
+</UL>
 <P><STRONG><a name="[0]"></a>Reset_Handler</STRONG> (Thumb, 8 bytes, Stack size 0 bytes, startup_lpc43xx.o(.text))
 <BR>[Address Reference Count : 1]<UL><LI> startup_lpc43xx.o(RESET)
 </UL>
@@ -386,56 +423,76 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[41]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_uldivmod (via Veneer)
 </UL>
 
-<P><STRONG><a name="[57]"></a>_ll_shift_l</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, llshl.o(.text), UNUSED)
+<P><STRONG><a name="[5e]"></a>_ll_shift_l</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, llshl.o(.text), UNUSED)
 
-<P><STRONG><a name="[47]"></a>GetClkSel</STRONG> (Thumb, 168 bytes, Stack size 0 bytes, system_lpc43xx.o(i.GetClkSel))
-<BR><BR>[Called By]<UL><LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetClockFreq (via Veneer)
+<P><STRONG><a name="[50]"></a>GPIO_PortClock</STRONG> (Thumb, 94 bytes, Stack size 0 bytes, gpio_lpc43xx.o(i.GPIO_PortClock))
+<BR><BR>[Called By]<UL><LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Initialize
+</UL>
+
+<P><STRONG><a name="[52]"></a>GPIO_SetDir</STRONG> (Thumb, 44 bytes, Stack size 8 bytes, gpio_lpc43xx.o(i.GPIO_SetDir))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = GPIO_SetDir
+</UL>
+<BR>[Called By]<UL><LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Initialize
+</UL>
+
+<P><STRONG><a name="[4d]"></a>GetClockFreq</STRONG> (Thumb, 196 bytes, Stack size 32 bytes, system_lpc43xx.o(i.GetClockFreq))
+<BR><BR>[Stack]<UL><LI>Max Depth = 44<LI>Call Chain = GetClockFreq &rArr; GetPLL1Param
+</UL>
+<BR>[Calls]<UL><LI><a href="#[4f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetClkSel (via Veneer)
+<LI><a href="#[4e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetPLL1Param
+</UL>
+<BR>[Called By]<UL><LI><a href="#[49]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemCoreClockUpdate
+</UL>
+
+<P><STRONG><a name="[4c]"></a>LED_Initialize</STRONG> (Thumb, 88 bytes, Stack size 8 bytes, led_lpc43xx.o(i.LED_Initialize))
+<BR><BR>[Stack]<UL><LI>Max Depth = 16<LI>Call Chain = LED_Initialize &rArr; SCU_PinConfigure
+</UL>
+<BR>[Calls]<UL><LI><a href="#[51]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SCU_PinConfigure
+<LI><a href="#[52]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIO_SetDir
+<LI><a href="#[50]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIO_PortClock
+<LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIO_PinWrite (via Veneer)
+</UL>
+<BR>[Called By]<UL><LI><a href="#[3c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main (via Veneer)
+</UL>
+
+<P><STRONG><a name="[51]"></a>SCU_PinConfigure</STRONG> (Thumb, 34 bytes, Stack size 8 bytes, scu_lpc43xx.o(i.SCU_PinConfigure))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = SCU_PinConfigure
+</UL>
+<BR>[Called By]<UL><LI><a href="#[4c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LED_Initialize
 </UL>
 
 <P><STRONG><a name="[49]"></a>SystemCoreClockUpdate</STRONG> (Thumb, 22 bytes, Stack size 8 bytes, system_lpc43xx.o(i.SystemCoreClockUpdate))
 <BR><BR>[Stack]<UL><LI>Max Depth = 52<LI>Call Chain = SystemCoreClockUpdate &rArr; GetClockFreq &rArr; GetPLL1Param
 </UL>
-<BR>[Calls]<UL><LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetClockFreq (via Veneer)
+<BR>[Calls]<UL><LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetClockFreq
 </UL>
-<BR>[Called By]<UL><LI><a href="#[3d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit
+<BR>[Called By]<UL><LI><a href="#[3d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit (via Veneer)
 </UL>
 
-<P><STRONG><a name="[3d]"></a>SystemInit</STRONG> (Thumb, 64 bytes, Stack size 8 bytes, system_lpc43xx.o(i.SystemInit))
-<BR><BR>[Stack]<UL><LI>Max Depth = 128<LI>Call Chain = SystemInit &rArr; SystemInit_ExtMemCtl &rArr; WaitUs &rArr; __aeabi_uldivmod
-</UL>
-<BR>[Calls]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit_ExtMemCtl
-<LI><a href="#[49]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemCoreClockUpdate
-<LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SetClock (via Veneer)
-</UL>
-<BR>[Address Reference Count : 1]<UL><LI> startup_lpc43xx.o(.text)
-</UL>
-<P><STRONG><a name="[4b]"></a>SystemInit_ExtMemCtl</STRONG> (Thumb, 1252 bytes, Stack size 48 bytes, system_lpc43xx.o(i.SystemInit_ExtMemCtl))
+<P><STRONG><a name="[4a]"></a>SystemInit_ExtMemCtl</STRONG> (Thumb, 1252 bytes, Stack size 48 bytes, system_lpc43xx.o(i.SystemInit_ExtMemCtl))
 <BR><BR>[Stack]<UL><LI>Max Depth = 120<LI>Call Chain = SystemInit_ExtMemCtl &rArr; WaitUs &rArr; __aeabi_uldivmod
 </UL>
 <BR>[Calls]<UL><LI><a href="#[41]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_uldivmod (via Veneer)
-<LI><a href="#[48]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WaitUs (via Veneer)
+<LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;WaitUs (via Veneer)
 </UL>
-<BR>[Called By]<UL><LI><a href="#[3d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit
+<BR>[Called By]<UL><LI><a href="#[3d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit (via Veneer)
 </UL>
-
-<P><STRONG><a name="[3c]"></a>main</STRONG> (Thumb, 182 bytes, Stack size 0 bytes, main.o(i.main))
-<BR>[Address Reference Count : 1]<UL><LI> entry9a.o(.ARM.Collect$$$$0000000B)
-</UL><P>
+<P>
 <H3>
 Local Symbols
 </H3>
-<P><STRONG><a name="[46]"></a>GetPLL1Param</STRONG> (Thumb, 68 bytes, Stack size 12 bytes, system_lpc43xx.o(i.GetPLL1Param))
+<P><STRONG><a name="[4e]"></a>GetPLL1Param</STRONG> (Thumb, 68 bytes, Stack size 12 bytes, system_lpc43xx.o(i.GetPLL1Param))
 <BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = GetPLL1Param
 </UL>
-<BR>[Called By]<UL><LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetClockFreq
+<BR>[Called By]<UL><LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GetClockFreq
 </UL>
 
-<P><STRONG><a name="[48]"></a>WaitUs</STRONG> (Thumb, 72 bytes, Stack size 32 bytes, system_lpc43xx.o(i.WaitUs))
+<P><STRONG><a name="[4b]"></a>WaitUs</STRONG> (Thumb, 72 bytes, Stack size 32 bytes, system_lpc43xx.o(i.WaitUs))
 <BR><BR>[Stack]<UL><LI>Max Depth = 72<LI>Call Chain = WaitUs &rArr; __aeabi_uldivmod
 </UL>
 <BR>[Calls]<UL><LI><a href="#[41]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_uldivmod
 </UL>
-<BR>[Called By]<UL><LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit_ExtMemCtl (via Veneer)
+<BR>[Called By]<UL><LI><a href="#[4a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemInit_ExtMemCtl (via Veneer)
 </UL>
 <P>
 <H3>
